<resources>
    <string name="app_name">Piter</string>
    <string name="home">Home</string>
    <string name="moments">Moments</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="character_count_label">Character count :</string>
    <string name="charcount_limit">/ 280</string>
    <string name="tweet">Tweet</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="no_tweet_found">No Tweet Found</string>
    <string name="tweet_saved">Tweet Saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_tweet">Save Tweet</string>
    <string name="areyousure_savetweet">Are you sure you want to save this tweet?</string>
    <string name="access_denied">Access Denied</string>
    <string name="storage_permissionrequired">Storage Permission is required to save or select image.</string>
    <string name="ok">OK</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="areyousure_deletetweet">Are you sure you want to delete this tweet? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="already_viewing_tag">You are already currently looking at this tag</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username_password_minchar">Username and Password should be 6 characters minimum.</string>
    <string name="password_minchar">Password should be 6 characters minimum.</string>
    <string name="warning">Warning</string>
    <string name="username_used">This username is already used.</string>
    <string name="success">Success</string>
    <string name="you_are_registered">You are registered.</string>
    <string name="username_password_invalid">Invalid username or password.</string>
    <string name="please_wait">Please Wait</string>
    <string name="signout_areyousure">Are you sure you want to sign out?</string>
    <string name="tweet_deleted">Tweet Deleted</string>
    <string name="search">Search</string>
    <string name="search_hashtag">Search Hashtag</string>
    <string name="no_moment_found">No Moment Found</string>
    <string name="moment_deleted">Moment Deleted</string>
    <string name="select_tweets">Select Tweets</string>
    <string name="no_tweet_selected">No Tweet Selected</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cover_image">Cover Image</string>
    <string name="background_color">Background Color</string>
    <string name="manage_moment">Manage Moment</string>
    <string name="save">Save</string>
    <string name="save_moment">Save Moment</string>
    <string name="areyousure_savemoment">Are you sure you want to save this moment?</string>
    <string name="moment_saved">Moment Saved</string>
    <string name="title_required">Title is required</string>
    <string name="delete_moment">Delete Moment</string>
    <string name="areyousure_deletemoment">Are you sure you want to delete this moment? This action cannot be undone.</string>
    <string name="finish">Finish</string>
    <string name="new_name">New Name</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="areyousure_savename">Are you sure you want to change your name?</string>
    <string name="areyousure_savepassword">Are you sure you want to change your password?</string>
    <string name="name_changed">Your name has been changed.</string>
    <string name="password_changed">Your password has been changed.</string>
    <string name="wrong_password">Wrong password.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
