<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Module.Authentication.RegisterActivity">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
        android:layout_below="@+id/layout_toolbar"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/margin_normal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_name"
                    android:hint="@string/name"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_username"
                    android:hint="@string/username"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_normal"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:hint="@string/password"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="top"
                    android:text="@string/username_password_minchar"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/register_signup"
                    android:background="@drawable/rounded_button_disable"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleSignUp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_loading"/>

</RelativeLayout>