<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Module.Authentication.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:focusableInTouchMode="true"
            android:padding="@dimen/margin_normal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_username"
                    android:hint="@string/username"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/margin_normal"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:hint="@string/password"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/no_account_yet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/login_signup"
                        android:text="@string/sign_up_here"
                        android:textColor="@color/colorPrimaryDark"
                        android:foreground="?selectableItemBackground"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <Button
                    android:id="@+id/login_signin"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:enabled="false"
                    android:background="@drawable/rounded_button_disable"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleSignIn"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_loading"/>

</RelativeLayout>